# s3proxy

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  go.mod  go.sum  go.work  renovate.json
.github/workflows/: build-push.yml  ci.yml  docker-build-push.yml  golangci-lint.yml  helm-push.yml
charts/s3proxy/: Chart.yaml  values.yaml
charts/s3proxy/dashboards/: s3proxy.json
charts/s3proxy/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  grafana-dashboard.yaml  prometheusrule.yaml  secret.yaml  servicemonitor.yaml  valssecret.yaml
docs/: DEVELOPMENT.md
monitoring/alerts/: s3proxy.yaml
s3proxy/cmd/: BUILD.bazel  main.go  main_test.go
s3proxy/internal/config/: config.go  validation.go  validation_test.go
s3proxy/internal/crypto/: BUILD.bazel
s3proxy/internal/cryptoutil/: BUILD.bazel  cryptoutil.go  cryptoutil_test.go  kek.go
s3proxy/internal/e2e/: proxy_e2e_test.go
s3proxy/internal/monitoring/: monitoring.go  monitoring_test.go
s3proxy/internal/router/: BUILD.bazel  body.go  handler.go  helpers_test.go  object.go  router.go  router_test.go  throttling.go
s3proxy/internal/s3/: BUILD.bazel  s3.go  s3_test.go
s3proxy/internal/tracing/: tracing.go  tracing_test.go
